--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -50,41 +50,89 @@
 
         <div class="slideSelecao">
 
-          
+
           <div class="slide">
             <ion-card class="ionCardSelecao" lines="none">
-              <img class="imgSelecao"  src="../../assets/imgs/fotos-boi/boi11.png" alt="">
-              <ion-card-content class="racaBoiSelecao">Angus <span>$3000</span>
-              </ion-card-content>
+              <img class="imgSelecao" src="../../assets/imgs/fotos-boi/boi11.png" alt="">
             </ion-card>
+            <ion-card-content class="racaBoiSelecao">Angus <span>$3000</span>
+            </ion-card-content>
           </div>
-          
+
           <div class="slide">
             <ion-card class="ionCardSelecao" lines="none">
-              <img class="imgSelecao"  src="../../assets/imgs/fotos-boi/boi3.png" alt="">
-              <ion-card-content class="racaBoiSelecao">Charolês <span>$2500</span></ion-card-content>
+              <img class="imgSelecao" src="../../assets/imgs/fotos-boi/boi3.png" alt="">
             </ion-card>
+            <ion-card-content class="racaBoiSelecao">Charolês <span>$2500</span></ion-card-content>
           </div>
           <div class="slide">
-            <ion-card lines="none">
+            <ion-card class="ionCardSelecao" lines="none">
               <img class="imgSelecao" src="../../assets/imgs/fotos-boi/boi1.png" alt="">
-              <ion-card-content class="racaBoiSelecao">WAGYU <span>$5000</span></ion-card-content>
             </ion-card>
+            <ion-card-content class="racaBoiSelecao">WAGYU <span>$5000</span></ion-card-content>
           </div>
-          
+
           <div class="slide">
             <ion-card class="ionCardSelecao" lines="none">
               <img class="imgSelecao" src="../../assets/imgs/fotos-boi/boi4.png" alt="">
-              <ion-card-content class="racaBoiSelecao">Hereford <span>$2500</span>
-              </ion-card-content>
             </ion-card>
+            <ion-card-content class="racaBoiSelecao">Hereford <span>$2500</span>
+            </ion-card-content>
           </div>
 
           <div class="slide">
             <ion-card class="ionCardSelecao" lines="none">
               <img class="imgSelecao" src="../../assets/imgs/fotos-boi/boi5.png" alt="">
-              <ion-card-content class="racaBoiSelecao">Galloway <span>$2000</span></ion-card-content>
             </ion-card>
+            <ion-card-content class="racaBoiSelecao">Galloway <span>$2000</span></ion-card-content>
+          </div>
+
+        </div>
+      </div>
+
+      <!--! --------------------------------- -->
+
+      <div class="containerSelecaoDoDia">
+        <div class="titulosSelecao">
+          <h5 class="tituloSelecao">Psicultura</h5>
+          <h4 class="tituloSelecao"><span class="verTodos">Ver todos</span></h4>
+        </div>
+        <div class="slideSelecao">
+
+          <div class="slide">
+            <ion-card class="ionCardSelecao" lines="none">
+              <img class="imgSelecao" src="../../assets/imgs/psicultura/psicultura.jpg" alt="">
+            </ion-card>
+            <ion-card-content class="racaBoiSelecao">Pesqueiro <span>Nova Mutum</span>
+            </ion-card-content>
+          </div>
+
+          <div class="slide">
+            <ion-card class="ionCardSelecao" lines="none">
+              <img class="imgSelecao" src="../../assets/imgs/psicultura/psicultura2.jpg" alt="">
+            </ion-card>
+            <ion-card-content class="racaBoiSelecao">Pesqueiro<span> Santa luzia</span></ion-card-content>
+          </div>
+          <div class="slide">
+            <ion-card class="ionCardSelecao" lines="none">
+              <img class="imgSelecao" src="../../assets/imgs/psicultura/psicultura3.jpg" alt="">
+            </ion-card>
+            <ion-card-content class="racaBoiSelecao"><span>Tilapia</span></ion-card-content>
+          </div>
+
+          <div class="slide">
+            <ion-card class="ionCardSelecao" lines="none">
+              <img class="imgSelecao" src="../../assets/imgs/psicultura/psicultura4.jpg" alt="">
+            </ion-card>
+            <ion-card-content class="racaBoiSelecao"><span>Pacu</span>
+            </ion-card-content>
+          </div>
+
+          <div class="slide">
+            <ion-card class="ionCardSelecao" lines="none">
+              <img class="imgSelecao" src="../../assets/imgs/psicultura/psicultura6.jpg" alt="">
+            </ion-card>
+            <ion-card-content class="racaBoiSelecao"><span>Pirara</span></ion-card-content>
           </div>
 
         </div>
@@ -92,4 +140,11 @@
 
     </section>
   </div>
+
+  <ion-footer class="footer">
+    <img class="logoFooter" src="../../assets/imgs/bfWhite.png" alt="">
+    <div>
+      <p>© Copyright 2023 - Todos os direitos reservados.</p>
+    </div>
+  </ion-footer>
 </ion-content>
