--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&family=Quicksand:wght@400&family=Share+Tech+Mono&display=swap');
 
 ion-content {
-  width: 100%;
+  height: 100%;
   margin: 0;
+  padding: 0;
 }
 
 .tituloHeader {
@@ -18,7 +19,7 @@ ion-content {
  
   display: flex;
   gap: 10px;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
   text-overflow: clip;
@@ -102,6 +103,9 @@ justify-content: space-between;
 
 .ionCardSelecao{
  border-radius: 10px;
+ width: 200px;
+ height: 100px;
+
 }
 
  .ionCardSelecao > .imgSelecao{
@@ -139,6 +143,22 @@ justify-content: space-between;
 .racaBoiSelecao span{
   color: #01976a;
 }
+
+.footer{
+  width: 100%;
+  background-color: #01976a;
+  text-align: center;
+  margin-top: 10%;
+  padding: 30px;
+  font-size: 16px;
+  font-family: 'Titillium Web', sans-serif;
+  color: white;
+}
+
+.logoFooter{
+  width: 40%;
+}
+
 
 
 
