--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -142,3 +142,14 @@ ion-content {
     font-family: bomFuturoMedium;
   }
   
+  .divLogarGoogle{
+    text-align: center;
+  }
+
+  .buttonLogarGoogle{
+    background-color: rgb(255, 255, 255);
+    width: 10%;
+    border-radius: 40px;
+    padding: 20px 0px;
+    margin: 2%;
+  }
