--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -20,8 +20,8 @@
       <div>
         <p>Imoveis</p>
       </div>
-      <div>
-        <p>Fazendas</p>
+      <div (click)="pagDesafiolucas()">
+        <p>desafiolucas</p>
       </div>
       <div (click)="sobreNos()">
         <p><span class="sobre">Sobre</span> Nós</p>
